--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -20,9 +20,10 @@
     </ul>
   </nav>
   <header class="header">
-    <h2 class="header__title">Hello! This is Front-end Lab.</h2 class="header_">
+    <h2 class="header__title">Hello! This is Front-end Lab.</h2>
     <h4 class="header__subtitle">EPAM Front-end Lab</h4>
     <a class="header__button btn">Discover More</a>
+  </header>
   <section class="main">
     <article class="article">
       <img class="article__img" src="./img/blog-image1.jpg" alt="">
