--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
@@ -13,19 +13,19 @@
   <nav class="nav">
     <h3 class="nav__text">Front-end Lab</h3>
     <ul class="nav__menu">
-      <li><a href="###" class="nav__menu--item">Home</a></li>
-      <li><a href="###" class="nav__menu--item">About</a></li>
-      <li><a href="###" class="nav__menu--item">Gallery</a></li>
-      <li><a href="###" class="nav__menu--item">Contact</a></li>
+      <li><a href="#home" class="nav__menu--item">Home</a></li>
+      <li><a href="#about" class="nav__menu--item">About</a></li>
+      <li><a href="#gallery" class="nav__menu--item">Gallery</a></li>
+      <li><a href="#contact" class="nav__menu--item">Contact</a></li>
     </ul>
   </nav>
-  <header class="header">
-    <h2 class="header__title">Hello! This is Front-end Lab.</h2>
+  <header class="header" id="home">
+    <h2 class="header__title" id="about">Hello! This is Front-end Lab.</h2>
     <h4 class="header__subtitle">EPAM Front-end Lab</h4>
-    <a class="header__button btn">Discover More</a>
+    <a class="header__button btn" href="">Discover More</a>
   </header>
-  <section class="main">
-    <article class="article">
+  <section class="main" id="gallery">
+    <div class="article">
       <img class="article__img" src="./img/blog-image1.jpg" alt="">
       <h3 class="article__title">We Help You To Make Front-end Great Again</h3>
       <div class="article__info">
@@ -38,10 +38,10 @@
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur.</p>
-      <a href="###" class="article__button btn">Continue Reading</a>
-    </article>
+      <a href="" class="article__button btn">Continue Reading</a>
+    </div>
     <hr>
-    <article class="article">
+    <div class="article">
       <img class="article__img" src="./img/blog-image2.jpg" alt="">
       <h3 class="article__title">In pretium tellus et ante accumsan</h3>
       <div class="article__info">
@@ -54,9 +54,9 @@
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur.</p>
-      <a href="###" class="article__button btn">Continue Reading</a>
-    </article>
-    <article class="article">
+      <a href="" class="article__button btn">Continue Reading</a>
+    </div>
+    <div class="article">
       <img class="article__img" src="./img/blog-image3.jpg" alt="">
       <h3 class="article__title">Nam interdum maximus dolor faucibus</h3>
       <div class="article__info">
@@ -69,9 +69,9 @@
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur.</p>
-      <a href="###" class="article__button btn">Continue Reading</a>
-    </article>
-    <article class="article">
+      <a href="" class="article__button btn">Continue Reading</a>
+    </div>
+    <div class="article">
       <img class="article__img" src="./img/blog-image4.jpg" alt="">
       <h3 class="article__title">The ingredients that make a great burger</h3>
       <div class="article__info">
@@ -84,9 +84,9 @@
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur.</p>
-      <a href="###" class="article__button btn">Continue Reading</a>
-    </article>
-    <article class="article">
+      <a href="" class="article__button btn">Continue Reading</a>
+    </div>
+    <div class="article">
       <img class="article__img" src="./img/blog-image5.jpg" alt="">
       <h3 class="article__title">Vestibulum vel mauris nec ex tempus</h3>
       <div class="article__info">
@@ -99,10 +99,10 @@
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur.</p>
-      <a href="###" class="article__button btn">Continue Reading</a>
-    </article>
+      <a href="" class="article__button btn">Continue Reading</a>
+    </div>
   </section>
-  <footer class="footer">
+  <footer class="footer" id="contact">
     <div class="footer__container">
       <h3 class="footer__container--title">EPAM LAB</h3>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
