change class names

--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -105,15 +105,15 @@
   <footer class="footer" id="contact">
     <div class="footer__container">
       <h3 class="footer__container--title">EPAM LAB</h3>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua.</p>
-      <p>Copyright &copy; 2019 EPAM</p>
+      <p class="footer__container--text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        dolore magna aliquyam erat, sed diam voluptua.</p c>
+      <p class="footer__container--text">Copyright &copy; 2019 EPAM</p>
     </div>
     <div class="footer__container">
       <h3 class="footer__container--title">Talk to us</h3>
-      <p>512 Delicious Street, San Francisco, CA 10880</p>
-      <p>010-020-0990</p>
-      <p>info@company.com</p>
+      <p class="footer__container--text">512 Delicious Street, San Francisco, CA 10880</p>
+      <p class="footer__container--text">010-020-0990</p>
+      <p class="footer__container--text">info@company.com</p>
     </div>
   </footer>
 </body>
