--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -105,7 +105,8 @@
   <footer class="footer" id="contact">
     <div class="footer__container">
       <h3 class="footer__container--title">EPAM LAB</h3>
-      <p class="footer__container--text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+      <p class="footer__container--text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et
         dolore magna aliquyam erat, sed diam voluptua.</p c>
       <p class="footer__container--text">Copyright &copy; 2019 EPAM</p>
     </div>
