--- a/FL12_HW4/homework/index.html
+++ b/FL12_HW4/homework/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Front-end lab</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -107,7 +107,7 @@
       <h3 class="footer__container--title">EPAM LAB</h3>
       <p class="footer__container--text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
         tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua.</p c>
+        dolore magna aliquyam erat, sed diam voluptua.</p>
       <p class="footer__container--text">Copyright &copy; 2019 EPAM</p>
     </div>
     <div class="footer__container">
@@ -116,7 +116,7 @@
       <p class="footer__container--text">010-020-0990</p>
       <p class="footer__container--text">info@company.com</p>
     </div>
-  </footer>
+  </footer> 
 </body>
 
 </html>
