twelveth homework done!

--- a/FL12_HW12/homework/index.html
+++ b/FL12_HW12/homework/index.html
@@ -9,9 +9,7 @@
 
 <body>
   <div id="root">
-      <div class="header"><a type="button" href="#add" id="addNewSet" class="button">Add new</a></div>
-      <section></section>
-      <footer></footer>
+      <header></header>
     </div>
   </div>
   <script src="./src/app.js"></script>
