--- a/FL12_HW12/homework/index.html
+++ b/FL12_HW12/homework/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <div id="root">
-      <header></header>
-    </div>
+    <header></header>
+    <section></section>
   </div>
   <script src="./src/app.js"></script>
 </body>
